# rural-ai-training

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  catalog.html  generate_donor_pdf.py  index.html  pyproject.toml  rural_course.html
.claude/: settings.json
.claude/hooks/: session-start.sh
donor-materials/: donor_slides.pptx  generate_pdf.py  generate_slides.py
src/ai_training_catalog/: __init__.py  cli.py  config.py  export_html.py
src/ai_training_catalog/contextualization/: engine.py  rural_context.py
src/ai_training_catalog/curriculum/: best_practices.py  generator.py  learning_path.py
src/ai_training_catalog/discovery/: agent.py  catalog.py  evaluator.py
src/ai_training_catalog/discovery/searchers/: arxiv_search.py  base.py  github_search.py  google_search.py
src/ai_training_catalog/ingestion/: categorizer.py  deduplicator.py  pipeline.py
src/ai_training_catalog/ingestion/scrapers/: base.py  html_scraper.py
src/ai_training_catalog/models/: __init__.py  curriculum.py  resource.py  taxonomy.py
src/ai_training_catalog/storage/: json_store.py  repository.py
src/ai_training_catalog/utils/: http_client.py  logging.py  rate_limiter.py  text_processing.py
